Add link to Gomoku game in projects template; enhance project navigation

--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -27,6 +27,10 @@
                 <a href="https://github.com/xhdndmm/chat.git" target="_blank"> github下载（最新） </a>
                 <a helf="https://file.ziyuan77.com/d/home/ziyuan77/chat-main.zip?sign=S-07vVD9QE-ch4hlfln-hIbq8ynLXrcmTnsLVQgUE6U=:0" target="_blank"> 资源站下载（不是最新但大陆地区稳定） </a>
             </ul>
+            <ul>
+                <p>五子棋</p>
+                <a href="/gomoku"> 五子棋 </a>
+            </ul>
         </div>
         <script src="/static/js/project.js"></script>
     </body>
