--- a/app/templates/win11.html
+++ b/app/templates/win11.html
@@ -7,10 +7,11 @@
         <link rel="stylesheet" href="/static/css/win11.css" />
     </head>
     <body>
-        <a href="/projects"><img src="/static/images/back.png" alt="logo" /></a>
-        <a href="/"><img src="/static/images/home.png" alt="logo" /></a>
+        
         <header>
             <h1>Windows 11 安装指南</h1>
+            <a href="/text"><img src="/static/images/back.png" alt="logo" /></a>
+            <a href="/"><img src="/static/images/home.png" alt="logo" /></a>
             <p>详细介绍各种安装方法</p>
         </header>
         <nav>
