--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,6 +14,8 @@
                     <li><a href="/tools">工具</a></li>
                     <li><a href="https://file.ziyuan77.com" target="_blank">资源站</a></li>
                     <li><a href="https://blog.ziyuan77.com" target="_blank">博客</a></li>
+                    <li><a href="/gomoku">五子棋，可联机对战</a></li>
+                    <li><a href="/cmd_commands">常用控制台命令及其参数</a></li>
                 </ul>
             </div>
             <div class="content">
