Add audio support for new FLAC file in index.html
- Introduced a new audio file (1.flac) to the static audio directory.
- Updated index.html to include an audio player for the new FLAC file, enhancing multimedia capabilities on the page.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,6 +25,10 @@
                     <source src="/static/audio/index.mp3" type="audio/mpeg">
                     您的浏览器不支持音频元素。
                 </audio>
+                <audio controls>
+                    <source src="/static/audio/1.flac" type="audio/mpeg">
+                    您的浏览器不支持音频元素。
+                </audio>
             </div>
         </div>
         <script src="/static/js/index.js"></script>
