Update index.html to include new links and contact information
- Added a link to the website source code on GitHub for easier access.
- Included a contact email address for user inquiries, enhancing communication options on the site.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,11 +16,13 @@
                     <li><a href="https://blog.ziyuan77.com" target="_blank">博客</a></li>
                     <li><a href="/gomoku">五子棋，可联机对战</a></li>
                     <li><a href="/cmd_commands">常用控制台命令及其参数</a></li>
+                    <li><a href="https://github.com/felixchioa/ziyuan77-web_flask" target="_blank">网站源码</a></li>
                 </ul>
             </div>
             <div class="content">
                 <h1>ziyuan77的网站</h1>
                 <h3>欢迎来到ziyuan77的网站，这里提供各种有用的工具和资源。</h3>
+                <h3>可以通过qq@ziyuan77.com联系我</h3>
                 <audio controls>
                     <source src="/static/audio/index.mp3" type="audio/mpeg">
                     您的浏览器不支持音频元素。
