Update daily.html with new entries, remove unused stats and time display from index.html, and add a new download link in projects.html
- Added two new entries for New Year's celebrations in daily.html.
- Removed the online users and local time display sections from index.html to streamline the interface.
- Introduced a new download link for a downloader project in projects.html, enhancing resource accessibility.

--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -31,6 +31,10 @@
                 <p>五子棋</p>
                 <a href="/gomoku"> 五子棋 </a>
             </ul>
+            <ul>
+                <p>下载器</p>
+                <a href="ghttps://github.com/xhdndmm/miaobox"> 下载器 </a>
+            </ul>
         </div>
         <script src="/static/js/project.js"></script>
     </body>
