--- a/app/templates/daily.html
+++ b/app/templates/daily.html
@@ -12,6 +12,9 @@
             <p>这里是一些日常记录。</p>
             <ul>
                 <!-- 示例：<li>2024-12-20: 今天天气不错，心情很好。</li> -->
+                <li>2025-01-01：新年快乐</li>
+                <hr>
+                <li>2024-12-31：新年快乐</li>
                 <li>2024-12-20：前端页面太丑了，所以赶工改了一下</li>
                 <li>2024-12-10：才反应过来。我的域名不正适合建资源站吗？所以建了个资源站<a href="https://file.ziyuan77.com" target="_blank"> file.ziyuan77.com </a></li>
                 <li>2024-12-05：找了一台不用的电脑，搞了台自己的服务器</li>
